# svnlog

./: .gitignore  .vimrc  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
src/: cli.py  svnlog.py
src/svnlog/: __init__.py
svnlog/: __init__.py  __main__.py  predicates.py
test/: log.xml  template.txt  test_cli.py  test_predicates.py  test_svnlog.py
