[metadata]
name=svnlog
description=SVNLog is an extension tools for formating the svn xml log
keywords=svn log
version=1.0
author=i-katas
url=https://github.com/i-katas/svnlog

[aliases]
test=pytest

[tool:pytest]
addopts=-s
testpaths=test

[options.entry_points]
console_scripts=
    svnlog=svnlog.cli:main

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
exclude =
    .git
    .pytest_cache
    .eggs
    .env
    __pycache__
    build
    dist

[easy_install]
index_url = https://pypi.tuna.tsinghua.edu.cn/simple

